[package]
name = "enarx-wasmldr"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>", "Daiki Ueno <dueno@redhat.com>", "Mike Bursell <mike@p2ptrust.org"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/enarx/enarx-wasmldr"
repository = "https://github.com/enarx/enarx-wasmldr"
description = "Enarx WebAssembly Loader"
readme = "README.md"
keywords = ["WebAssembly", "wasm"]
categories = ["development-tools"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/enarx-wasmldr", workflow = "test" }
#github = { repository = "enarx/enarx-wasmldr", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/enarx-wasmldr" }
is-it-maintained-open-issues = { repository = "enarx/enarx-wasmldr" }

[dependencies]
sys-info = "0.7.0"
wasmtime = { version = "0.21", default-features = false }
wasmtime-wasi = { version = "0.21", default-features = false }
wasi-common = { version = "0.21", default-features = false }
env_logger = "0.8"
log = "0.4"



wasmparser = "0.70"

#-----
#koine = { path = "../enarx-poc/koine" }
koine = { git = "https://github.com/MikeCamel/koine", branch="poc-dependencies" }
#koine = { git = "https://github.com/enarx/koine" }
uuid =  { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.7", features = ["blocking", "json", "native-tls"] }
rand = "0.7.3"

tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
#serde_json = "1.0"
cbor = { version = "0.4.1" }
http = "0.2"
#-----


serde_yaml = "0.8"

openssl = { version = "0.10", features = ["vendored"] }
tar = "0.4"
tempfile = "3"
clap = "2.33"

cfg-if = "1.0"


[build-dependencies]
wat = "1.0"

[[bin]]
name = "enarx-wasmldr"
path = "src/main.rs"

#[[bin]]
#name = "enarx-wasmres"
#path = "src/enarx-wasmres.rs"

#[[bin]]
#name = "enarx-wasmldr-tester"
#path = "src/enarx-wasmldr-tester.rs"


[profile.release]
incremental = false
codegen-units = 1
lto = true
