[package]
name = "enarx-wasmldr"
version = "0.2.0"
authors = ["Will Woods <will@congru.us>", "Stefan Junker <mail@stefanjunker.de>", "Daiki Ueno <dueno@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/enarx/enarx-wasmldr"
repository = "https://github.com/enarx/enarx-wasmldr"
description = "Enarx WebAssembly Loader"
readme = "README.md"
keywords = ["WebAssembly", "wasm"]
categories = ["development-tools"]
exclude = [ ".gitignore", ".github/*" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/enarx-wasmldr", workflow = "test" }
#github = { repository = "enarx/enarx-wasmldr", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/enarx-wasmldr" }
is-it-maintained-open-issues = { repository = "enarx/enarx-wasmldr" }

[dependencies]
wasmtime = { version = "0.30", default-features = false }
wasmtime-wasi = { version = "0.29", default-features = false, features = ["sync"] }
wasi-common = { version = "0.29", default-features = false }
env_logger = "0.9"
log = "0.4"

wasmparser = "0.80"
structopt = "0.3.22"
anyhow = "1.0"

[build-dependencies]
wat = "1.0"

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
lto = true
opt-level = "s"
# This only works in nightly...
#strip = "debuginfo"
